css/styles.css
body {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 2%;
  color: #434455;
  background-color: #ffffff;
}

/* reset */

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

ul,
ol {
  margin: 0;
  padding-left: 0;
  list-style-type: none;
}

img {
  display: block;
}

/* common */

.visually-hidden {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
}

.container {
  max-width: 1158px;
  padding: 0 15px;
  margin: 0 auto;
}

.logo {
  text-transform: uppercase;
  font-family: "Raleway", sans-serif;
  font-weight: 700;
  font-size: 18px;
  letter-spacing: 0.03em;
  text-decoration: none;
  line-height: 1.17;
  color: #4d5ae5;
}

.secondary-section-title {
  font-weight: 700;
  font-size: 36px;
  text-align: center;
  color: #2e2f42;
  line-height: 1.2;
  letter-spacing: 0.02em;
  text-transform: capitalize;
}

.section-text {
  letter-spacing: 0.02em;
}

.sub-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  letter-spacing: 0.02em;
  color: #2e2f42;
}

.cards-text {
  padding: 32px 0;
}

/* header */

.page-header {
  border-bottom: 1px solid #e7e9fc;
}

.header-container {
  display: flex;
  flex-direction: row;
}

.header-nav {
  display: flex;
  align-items: center;
}

.nav-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.header-logo {
  padding: 24px 0;
  margin-right: 76px;
}

.header-logo .logo-accent {
  color: #2e2f42;
}

.nav-link {
  display: block;
  padding: 24px 0;
  font-weight: 500;
  color: #2e2f42;
  text-decoration: none;
  font-style: inherit;
  letter-spacing: 0.02em;
}

.nav-link:hover,
.nav-link:focus {
  color: #404bbf;
}

.contacts {
  font-style: normal;
  margin-left: auto;
}

.contacts-list {
  display: flex;
  align-items: center;
  gap: 40px;
}

.contacts-link {
  display: block;
  padding: 24px 0;
  color: #434455;
  text-decoration: none;
  letter-spacing: 0.02em;
}

.contacts-link:hover,
.contacts-link:focus {
  color: #404bbf;
}

/* hero-section */

.hero-section {
  background-color: #2e2f42;
  padding: 188px 0;
  text-align: center;
}

.hero-section-title {
  text-align: center;
  max-width: 496px;
  font-weight: 700;
  font-size: 56px;
  margin: 0 auto;
  color: #ffffff;
  line-height: 1.07;
  letter-spacing: 0.02em;
  margin-bottom: 48px;
  display: inline-block;
}

.hero-section-button {
  display: block;
  margin: 0 auto;
  background-color: #4d5ae5;
  color: #ffffff;
  font-weight: 500;
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  text-align: center;
  border-radius: 4px;
  padding: 16px 32px;
  width: fit-content;
  height: 56px;
  border: none;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
  margin: 0 auto;
  min-width: 169px;
  cursor: pointer;
}

.hero-section-button:hover,
.hero-section-button:focus {
  background-color: #404bbf;
  cursor: pointer;
}

/* Features section */

.features-section {
  padding: 120px 0;
}

.features-list {
  display: flex;
  gap: 24px;
}

.features-item {
  width: calc((100% - 72px) / 4);
}

.features-item .sub-title {
  margin-bottom: 8px;
}

/* Team section */

.team-section {
  background-color: #f4f4fd;
  padding: 120px 0;
}

.team-section .secondary-section-title {
  line-height: 1.11;
  margin-bottom: 72px;
}

.team-list {
  display: flex;
  gap: 24px;
}

.team-cards {
  width: calc((100% - 72px) / 4);
  background-color: #ffffff;
  text-align: center;
  border-radius: 0 0 4px 4px;
  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
}

.team-cards .sub-title {
  margin-bottom: 8px;
}

/* Portfolio section */

.portfolio-section {
  padding: 120px 0;
}

.portfolio-section .secondary-section-title {
  line-height: 1.11;
  margin-bottom: 72px;
}

.portfolio-list {
  display: flex;
  gap: 24px;
  flex-wrap: wrap;
  row-gap: 48px;
}

.portfolio-cards {
  width: calc((100% - 48px) / 3);
}

.portfolio-cards .cards-text {
  border-bottom: 1px solid #e7e9fc;
  border-left: 1px solid #e7e9fc;
  border-right: 1px solid #e7e9fc;
  padding: 32px 16px;
}

.portfolio-cards .sub-title {
  margin-bottom: 8px;
}

/* Footer */
.footer-section {
  background-color: #2e2f42;
  padding: 100px 0;
}

.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}

.footer-logo .logo-accent {
  color: #f4f4fd;
}

.footer-section .section-text {
  color: #f4f4fd;
}

